Fix jumping width

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,7 +1,8 @@
 @import './base.css';
 
 #app {
-  max-width: 1280px;
+  max-width: 1024px;
+  width: 100%;
   margin: 0 auto;
   padding: 2rem;
   font-weight: normal;
@@ -90,6 +91,8 @@ textarea {
   border: 1px solid var(--vt-c-divider-dark-2);
   padding: 0.25rem;
   width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .output h4 {
@@ -108,6 +111,7 @@ pre {
   color: var(--color-background);
   padding: 0.5rem;
   overflow-wrap: anywhere;
+  flex-grow: 1;
 }
 
 @media (hover: hover) {
